force-app/main/default/objects/COMM_CommerceAppMapping__mdt/COMM_CommerceAppMapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store mapping of Custom Attributes sent to Commerce through the Connected App for Customer Login</description>
    <label>Commerce App Attribute Mapping</label>
    <pluralLabel>Commerce App Attribute Mappings</pluralLabel>
</CustomObject>