force-app/main/default/objects/COMM_CommerceAppMapping__mdt/fields/COMM_CustomAttribute__c.field-meta.xml
<CustomField>
    <fullName>COMM_CustomAttribute__c</fullName>
    <description>Name of the Custom Attribute to be sent to Commerce</description>
    <label>Custom Attribute</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>