force-app/main/default/objects/COMM_CommerceAppMapping__mdt/fields/COMM_IsB2CMapping__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsB2CMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates mapping is performed if client is B2C (value = checked) or B2B (value = unchecked)</description>
    <label>Is B2C Mapping?</label>
    <type>Checkbox</type>
</CustomField>