force-app/main/default/objects/COMM_CommerceAppMapping__mdt/fields/COMM_IsObjecField__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsObjecField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if mapping correspondes to a field inside a object in the JSON</description>
    <inlineHelpText>Check if Mapping is for an inner object</inlineHelpText>
    <label>Is Object Field</label>
    <type>Checkbox</type>
</CustomField>