force-app/main/default/objects/COMM_CommerceAppMapping__mdt/fields/COMM_ObjectAttributeName__c.field-meta.xml
<CustomField>
    <fullName>COMM_ObjectAttributeName__c</fullName>
    <description>Name of the field when mapping is for an object to be created inside JSON</description>
    <label>Object Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>