force-app/main/default/objects/COMM_CommerceAppMapping__mdt/fields/COMM_SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>COMM_SObjectApiName__c</fullName>
    <description>API Name of the Salesforce SObject that is being mapped</description>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>